--- a/app/src/main/res/layout/empty_state.xml
+++ b/app/src/main/res/layout/empty_state.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_empty_state"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,12 +22,12 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img_empty_state"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="258dp"
+        android:layout_height="257dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_time"/>
+        app:srcCompat="@drawable/ic_time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
